Fixed some spacing and added more text

--- a/styles/resumeStyles.css
+++ b/styles/resumeStyles.css
@@ -3,3 +3,14 @@
         filter: brightness(0) saturate(100%) invert(100%)
     }
 }
+
+.main-containers {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 0;
+    height: auto;
+}
+
+#resume {
+    padding-top: 0;
+}
